src/test/deca/context/invalid/class_already_declared.deca
// Test la règle 1.3: la classe déclarée existe déjà.

class A  {
    int x = 5;
}

class A  {
    float f = 12.5;
}

// Resultat:
//# DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:42) - verify program: start
//# DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass(ListDeclClass.java:28) - verify listClass: start
//# src/test/deca/context/invalid/class_already_declared.deca:7:0: The class "fr.ensimag.deca.tree.Identifier@396a51ab" is already declared : rule 1.3